--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.303.0",
     "next": "14.2.35",
+    "next-auth": "^4.24.13",
     "next-themes": "0.4.6",
     "react": "^18",
     "react-dom": "^18",
