--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@google-cloud/firestore": "8.1.0",
     "@google-cloud/storage": "7.18.0",
     "@radix-ui/react-accordion": "^1.1.2",
